# hailstorm

./: .gitignore  Gemfile  Guardfile  LICENSE  README  README.md  cleanup.sh  colorize_trends  hailstorm.cabal  index.html  thunderclap.cabal
data/: skewdata.txt  test.txt
demo/: hailstorm.md  index.html  style.css
paper/: .gitignore  hailstorm.bib  hailstorm.tex
paper/graffles/: architecture.graffle  lwm_bolts.graffle  lwm_spouts.graffle  master_state.graffle
src/: HailstormCLI.hs  HailstormSample.hs  UserFormula.hs
src/Hailstorm/: Clock.hs  Concurrency.hs  Error.hs  InputSource.hs  Logging.hs  MasterState.hs  Negotiator.hs  Partition.hs  Payload.hs  Processor.hs  ProcessorNew.hs  Processors.hs  Runner.hs  SnapshotStore.hs  Topology.hs  TransactionTypes.hs  UserFormula.hs  ZKCluster.hs  Zookeeper.hs
src/Hailstorm/InputSource/: FileSource.hs  KafkaSource.hs
src/Hailstorm/Processor/: Downstream.hs  Pool.hs  Runner.hs  Spout.hs
src/Hailstorm/Sample/: WordCountKafkaEmitter.hs  WordCountSample.hs
src/Hailstorm/SnapshotStore/: DirSnapshotStore.hs
src/Hailstorm/Topology/: HardcodedTopology.hs
src/Hailstorm/ZKCluster/: MasterState.hs  ProcessorState.hs
