name:                hailstorm
version:             0.1.0.0
synopsis:            Hailstorm is our CS240h final project
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Thomas Dimson, Milind Ganjoo
maintainer:          Thomas Dimson, Milind Ganjoo
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library 
  -- main-is:
  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src
  exposed-modules:
    Hailstorm.UserFormula
    Hailstorm.Processors
  build-depends:
    base >=4.6 && <4.7
   ,bytestring
   ,pipes
   ,directory
   ,filepath
  default-language:    Haskell2010
  ghc-options: -Wall

executable hailstorm_sample
  hs-source-dirs: src
  main-is: HailstormSample.hs
  build-depends:
      base < 5
    , bytestring
    , pipes
  Other-Modules: Hailstorm.UserFormula
  default-language: Haskell2010
