name:                hailstorm
version:             0.1.0.0
synopsis:            Hailstorm is our CS240h final project
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Thomas Dimson, Milind Ganjoo
maintainer:          Thomas Dimson, Milind Ganjoo
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- main-is:
  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src
  exposed-modules:
    Hailstorm.Clock
    Hailstorm.Error
    Hailstorm.Partition
    Hailstorm.Payload
    Hailstorm.Processor
    Hailstorm.Processor.Runner
    Hailstorm.Runner
    Hailstorm.Sample.WordCountSample
    Hailstorm.Topology
    Hailstorm.UserFormula
    Hailstorm.ZKCluster
  build-depends:
     base >=4.6
   , bytestring
   , pipes
   , directory
   , filepath
   , word8
   , network-simple
   , network
   , containers
   , split
   , hzk
   , unix
   , transformers
   , either
  default-language:    Haskell2010
  ghc-options: -Wall -threaded

executable hailstorm
  hs-source-dirs: src
  main-is: HailstormCLI.hs
  build-depends:
     base >=4.6
   , bytestring
   , pipes
   , directory
   , filepath
   , network-simple
   , network
   , word8
   , containers
   , split
   , hzk
   , options
   , unix
  Other-Modules: Hailstorm.UserFormula
  default-language: Haskell2010
  ghc-options: -Wall -threaded
