name:                hailstorm
version:             0.1.0.0
synopsis:            Hailstorm is our CS240h final project
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Thomas Dimson, Milind Ganjoo
maintainer:          Thomas Dimson, Milind Ganjoo
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- main-is:
  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src
  exposed-modules:
    Hailstorm.Clock
    Hailstorm.Concurrency
    Hailstorm.Error
    Hailstorm.InputSource
    Hailstorm.InputSource.FileSource
    Hailstorm.InputSource.KafkaSource
    Hailstorm.Logging
    Hailstorm.Negotiator
    Hailstorm.Payload
    Hailstorm.Processor
    Hailstorm.Processor.Downstream
    Hailstorm.Processor.Pool
    Hailstorm.Processor.Spout
    Hailstorm.Runner
    Hailstorm.Sample.WordCountSample
    Hailstorm.Sample.WordCountKafkaEmitter
    Hailstorm.SnapshotStore
    Hailstorm.SnapshotStore.DirSnapshotStore
    Hailstorm.Topology
    Hailstorm.Topology.HardcodedTopology
    Hailstorm.TransactionTypes
    Hailstorm.ZKCluster
    Hailstorm.ZKCluster.MasterState
    Hailstorm.ZKCluster.ProcessorState
  build-depends:
     base >=4.6
   , bytestring
   , pipes
   , pipes-concurrency
   , directory
   , filepath
   , hslogger
   , word8
   , network-simple
   , network
   , containers
   , split
   , hzk
   , unix
   , transformers
   , either
   , monad-loops
   , haskakafka >= 0.1.0.7
   , stm
   , PSQueue
   , hashable
  default-language:    Haskell2010
  ghc-options: -Wall -threaded

executable hailstorm
  hs-source-dirs: src
  main-is: HailstormCLI.hs
  build-depends:
     base >=4.6
   , bytestring
   , pipes
   , pipes-concurrency
   , directory
   , filepath
   , hslogger
   , network-simple
   , network
   , word8
   , containers
   , split
   , hzk
   , options
   , unix
   , monad-loops
   , haskakafka >= 0.1.0.7
   , stm
   , PSQueue
   , hashable
  default-language: Haskell2010
  ghc-options: -Wall -threaded
